# newmoon

./: .gitignore  CMakeLists.txt  Makefile  NewMoon.cpp  NewMoon.hpp  README.md  ephemshelper.hpp  jd_clock.cpp  jd_clock.hpp  jpl_int.h  jpleph.cpp  jpleph.h  junkyard.cpp  lalgebra.hpp  newmoon.cpp  newmoon.hpp  newmoons.csv  sample_output.txt
ephem/: .gitignore  Makefile
include/: quadmath.h
lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: CMakeLists.txt  astro.cpp  astro.hpp  calculus.cpp  calculus.hpp  defunct.hpp  ephemshelper.hpp  jd_clock.cpp  jd_clock.hpp  jpl_int.h  junkyard.cpp  lalgebra.cpp  lalgebra.hpp  newmoon.cpp  newmoon.hpp  tetrabiblos.cpp  tetrabiblos.hpp
test/: CMakeLists.txt  jd_clock.cpp  lalgebra.cpp  main.cpp
